examples/test/testpolicy16210.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16210
  namespace: namespace186
spec:
  podSelector:
    matchLabels:
      key35: value3
      key12: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value16
          key15: value41
      podSelector:
        matchLabels:
          key39: value26
          key31: value3
          key46: value33
